# Perfect_World_guild_forum

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
auction/: admin.py  forms.py  models.py  urls.py  views.py
auction/migrations/: 0001_initial.py  0002_auctionbid_is_frozen_auctionbid_status_and_more.py  0002_remove_auctionlot_subcategory.py  0003_remove_auctionlot_max_winners_and_more.py
config/: settings.py  urls.py
forum/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_post_image.py  0002_subcategory.py  0003_alter_post_content.py  0003_topic.py  0004_post.py  0004_remove_post_image_postimage.py  0005_alter_topic_options_category_view_groups_and_more.py  0005_subcategory_is_reception.py  0006_category_require_auth_subcategory_require_auth_and_more.py  0006_subcategory_is_reception_view.py  0007_auto_20260415_1617.py  0008_subcategory_is_auction.py
koslist/: admin.py  apps.py  models.py  urls.py  views.py
koslist/migrations/: 0001_initial.py  0002_alter_guild_options_alter_player_options.py
notifications/: admin.py  context_processors.py  models.py  urls.py  utils.py  views.py
notifications/migrations/: 0001_initial.py
profiles/: admin.py  admin_views.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_profile_bu_alter_profile_pa_alter_profile_pz.py  0003_profile_fa_alter_profile_bd.py  (+4 more)
reception/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
templates/: base.html  index.html
(+46 files in other folders)
